ats scanner and ranker tool

--- a/VectorDB.ipynb
+++ b/VectorDB.ipynb
@@ -277,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Hedera Offset is a system that enables the creation of carbon offset programs to help nations or regions meet international carbon reduction targets. It leverages IoT-enabled devices, blockchain technology, and tokenization to track, verify, and trade carbon credits. The technology used includes IoT devices like smart meters and environmental sensors to capture emissions data, a backend Hedera Offset Node built in Node.js for processing and notarizing data on the Hedera blockchain using the Consensus Service (HCS), a PostgreSQL database connected through Prisma for efficient data storage and retrieval, and the creation of Non-Fungible Tokens (NFTs) through Hedera's Token Service (HTS) for tokenized carbon credits. The system also integrates with hardware resources like smart meters and software resources like an operating system (Windows/Mac/Linux), IDE (VS Code/Android Studio), programming languages (C++ and Node JS), and the Hedera Blockchain platform.\""
+       "'The writers of the paper titled \"Trust Based Carbon Offsetting using IOT and Blockchain for a Decentralized Carbon Economy\" are Swapnil Shinde, Ankit Kokane, Shivraj Sakunde, and Shruti Sharma.'"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
